<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com</groupId>
    <artifactId>PointOfSale</artifactId>
    <version>1.0</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>javax.json</artifactId>
            <version>1.1.4</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>13</version>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.43.0.0</version> 
        </dependency>
        <dependency>
          <groupId>com.google.code.gson</groupId>
          <artifactId>gson</artifactId>
          <version>2.10.1</version> 
        </dependency>
        <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
          <version>2.15.2</version> 
        </dependency>
        <dependency>
          <groupId>com.google.zxing</groupId>
          <artifactId>javase</artifactId>
          <version>3.5.3</version>
        </dependency>
        
        <dependency>
        <groupId>com.google.zxing</groupId>
        <artifactId>core</artifactId>
        <version>3.4.1</version>
       </dependency>

        <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-media</artifactId>
        <version>21</version>
    </dependency>
    <dependency>
    <groupId>org.openjfx</groupId>
    <artifactId>javafx-swing</artifactId>
    <version>17.0.1</version> 
    </dependency>
    <dependency>
  <groupId>com.github.sarxos</groupId>
  <artifactId>webcam-capture</artifactId>
  <version>0.3.12</version>
  </dependency>
    </dependencies>
    <build>
 <plugins>
  <!-- Compiler Plugin to use Java 15 or higher -->
  <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-compiler-plugin</artifactId>
    <version>3.8.0</version>
    <configuration>
      <source>15</source>
      <target>15</target>
      <compilerArgs>
        <arg>--add-reads</arg>
        <arg>com.pointofsale=ALL-UNNAMED</arg>
      </compilerArgs>
    </configuration>
  </plugin>

  <!-- JavaFX Maven Plugin -->
  <plugin>
    <groupId>org.openjfx</groupId>
    <artifactId>javafx-maven-plugin</artifactId>
    <version>0.0.4</version>
    <configuration>
      <mainClass>com.pointofsale.App</mainClass>
      <options>
        <option>--add-reads</option>
        <option>com.pointofsale=ALL-UNNAMED</option>
      </options>
    </configuration>
    <executions>
      <execution>
        <id>default-cli</id>
      </execution>
      <execution>
        <id>debug</id>
        <configuration>
          <options>
            <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>
            <option>--add-reads</option>
            <option>com.pointofsale=ALL-UNNAMED</option>
          </options>
        </configuration>
      </execution>
      <execution>
        <id>ide-debug</id>
        <configuration>
          <options>
            <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
            <option>--add-reads</option>
            <option>com.pointofsale=ALL-UNNAMED</option>
          </options>
        </configuration>
      </execution>
      <execution>
        <id>ide-profile</id>
        <configuration>
          <options>
            <option>${profiler.jvmargs.arg1}</option>
            <option>${profiler.jvmargs.arg2}</option>
            <option>${profiler.jvmargs.arg3}</option>
            <option>${profiler.jvmargs.arg4}</option>
            <option>${profiler.jvmargs.arg5}</option>
            <option>--add-reads</option>
            <option>com.pointofsale=ALL-UNNAMED</option>
          </options>
        </configuration>
      </execution>
    </executions>
  </plugin>
  <plugin>
  <groupId>org.apache.maven.plugins</groupId>
  <artifactId>maven-shade-plugin</artifactId>
  <version>3.4.1</version>
  <executions>
    <execution>
      <phase>package</phase>
      <goals>
        <goal>shade</goal>
      </goals>
      <configuration>
        <transformers>
          <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
            <mainClass>com.pointofsale.App</mainClass>
          </transformer>
        </transformers>
      </configuration>
    </execution>
  </executions>
</plugin>

</plugins>

    </build>
</project>
